# mlh-sidekick

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: .env.example  .gitignore  .pylintrc  README.md  home.py  pyproject.toml  railway.adk.json  railway.json  requirements.txt
backend/agents/: prompts.py
backend/agents/code_reviewer_agent/: agent.py
backend/agents/dot_tech_agent/: __init__.py  agent.py
backend/agents/elevenlabs_agent/: README.md  agent.py
backend/agents/gemini_agent/: agent.py
backend/agents/mongodb_agent/: README.md  agent.py
backend/app/: main.py
backend/prisma/: schema.prisma
backend/sidekick_agent/: agent.py
frontend/: railway.json
