[project]
name = "backend"
version = "0.1.0"
description = "MLH Sidekick Backend API built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "prisma==0.15.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
]
